syntax = "proto3";

package tieba;

option java_package = "com.huanchengfly.tieba.post.api.models.protos";

import "ActPost.proto";
import "AddPostList.proto";
import "Advertisement.proto";
import "Agree.proto";
import "DealInfo.proto";
import "HeadItem.proto";
import "Item.proto";
import "Lbs.proto";
import "NovelInfo.proto";
import "OriginThreadInfo.proto";
import "PbContent.proto";
import "PbPostZan.proto";
import "PbPresent.proto";
import "SignatureData.proto";
import "SimpleForum.proto";
import "SkinInfo.proto";
import "SubPost.proto";
import "TPointPost.proto";
import "TailInfo.proto";
import "TogetherHi.proto";
import "User.proto";
import "VideoInfo.proto";
import "Zan.proto";

message Post {
    uint64 id = 1;
    string title = 2;
    uint32 floor = 3;
    uint32 time = 4;
    repeated PbContent content = 5;
    repeated string arr_video = 6;
    Lbs lbs_info = 7;
    uint32 is_vote = 8;
    uint32 is_voice = 9;
    uint32 is_ntitle = 10;
    uint32 is_bub = 11;
    string vote_crypt = 12;
    uint32 sub_post_number = 13;
    string time_ex = 14;
    SubPost sub_post_list = 15;
    AddPostList add_post_list = 16;
    string bimg_url = 17;
    string ios_bimg_format = 18;
    int64 author_id = 19;
    uint32 add_post_number = 20;
    SignatureData signature = 21;
    TailInfo tail_info = 22;
    User author = 23;
    Zan zan = 24;
    int32 storecount = 25;
    TPointPost tpoint_post = 26;
    ActPost act_post = 27;
    PbPresent present = 28;
    VideoInfo video_info = 29;
    PbPostZan post_zan = 30;
    int32 is_hot_post = 31;
    repeated TailInfo ext_tails = 32;
    TogetherHi high_together = 33;
    SkinInfo skin_info = 34;
    DealInfo pb_deal_info = 35;
    string lego_card = 36;
    Agree agree = 37;
    SimpleForum from_forum = 38;
    int32 is_post_visible = 39;
    int32 need_log = 40;
    int32 img_num_abtest = 41;
    OriginThreadInfo origin_thread_info = 42;
    int32 is_fold = 43;
    string fold_tip = 44;
    int32 is_top_agree_post = 45;
    int64 tid = 46;
    int32 show_squared = 47;
    int32 is_bjh = 48;
    string quote_id = 50;
    int32 is_wonderful_post = 51;
    repeated HeadItem item_star = 52;
    Item item = 53;
    Item outer_item = 54;
    Advertisement advertisement = 55;
    int32 fold_comment_status = 56;
    string fold_comment_apply_url = 57;
    NovelInfo novel_info = 58;
}
