syntax = "proto3";

package tieba;

option java_package = "com.huanchengfly.tieba.post.api.models.protos";

import "AdInfo.proto";
import "Abstract.proto";
import "Agree.proto";
import "AlaLiveInfo.proto";
import "DislikeInfo.proto";
import "HotTWThreadInfo.proto";
import "Media.proto";
import "PbContent.proto";
import "SimpleForum.proto";
import "TiebaPlusAd.proto";
import "User.proto";
import "VideoInfo.proto";
import "Voice.proto";
import "VoiceRoom.proto";
import "ZhiBoInfoTW.proto";

message ThreadInfo {
  int64 id = 1;
  int64 threadId = 2;
  string title = 3;
  int32 replyNum = 4;
  int32 viewNum = 5;
  string lastTime = 6;
  int32 lastTimeInt = 7;
  int32 threadTypes = 8;
  int32 isTop = 9;
  int32 isGood = 10;
  User author = 18;
  User lastReplyer = 19;
  int32 commentNum = 20;
  repeated Abstract _abstract = 21;
  repeated Media media = 22;
  int64 forumId = 27;
  string forumName = 28;
  int32 isNoTitle = 38;
  int64 firstPostId = 40;
  int32 createTime = 45;
  int32 collectStatus = 50;
  string collectMarkPid = 51;
  int64 post_id = 52;
  int32 isMemberTop = 54;
  int64 authorId = 56;
  string pids = 61;
  ZhiBoInfoTW twzhibo_info = 72;
  optional VideoInfo videoInfo = 79;
  repeated PbContent richTitle = 111;
  repeated PbContent richAbstract = 112;
  optional AlaLiveInfo ala_info = 113;
  repeated DislikeInfo dislikeInfo = 120;
  int32 agreeNum = 124;
  Agree agree = 126;
  int64 shareNum = 135;
  repeated PbContent firstPostContent = 142;
  int32 isTopic = 148;
  string topicUserName = 149;
  string topicH5Url = 150;
  SimpleForum forumInfo = 155;
  string tShareImg = 159;
  string nid = 164;
  int32 tabId = 175;
  string tabName = 176;
  int32 isDeleted = 181;
  int32 hotNum = 182;
}